include(GoogleTest)

find_package(GTest CONFIG REQUIRED)

enable_testing()

add_subdirectory(26)
add_subdirectory(27)
add_subdirectory(55)
add_subdirectory(80)
add_subdirectory(88)
add_subdirectory(121)
add_subdirectory(122)
add_subdirectory(169)
add_subdirectory(189)
add_subdirectory(238)
add_subdirectory(274)
add_subdirectory(380)
